--- a/test_AWDp.html
+++ b/test_AWDp.html
@@ -85,9 +85,22 @@
             }
         }
 
-        @media screen and (max-width: 779px) {
+        @media screen and (max-width: 699px) {
             .footer {
                 display: none;
+            }
+        }
+
+        @media screen and (max-width: 699px) {
+            .main {
+                display: grid;
+                grid-column: 1/5;
+                grid-row: 2/3;
+            }
+
+            .sidebar {
+                grid-row: 3 / 4;
+                grid-column: 1 / 5;
             }
         }
     </style>
