--- a/SAit.html
+++ b/SAit.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="body">
-    <heade>
+    <header>
         <div class="Head">
             <img src="logo.png" alt="Логотип">
             <div class="push">
@@ -24,7 +24,7 @@
                 <button class="butt klik_1">Login</button>
                 <button class="butt klik_2">Register</button></div>
         </div>
-    </heade>
+    </header>
 
     <main>
         <div class="mai">
